# CUDA_basics

./: .gitignore  CMakeLists.txt  README.md  convolution1d.cu  convolution2d.cu  histogram.cu  makebuild.sh  matrixmult.cu  vectoradd.cu  vectorsum.cu
include/: cuda_tools.h
